--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "@fortawesome/react-fontawesome": "^0.1.17",
         "next": "12.0.9",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "typewriter-effect": "^2.18.2"
     },
     "devDependencies": {
         "eslint": "8.8.0",
