--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@apollo/client": "^3.5.8",
         "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
         "@fortawesome/free-brands-svg-icons": "^5.15.4",
         "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
         "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
         "@fortawesome/react-fontawesome": "^0.1.17",
+        "graphql": "^16.3.0",
         "next": "12.0.9",
         "react": "17.0.2",
         "react-dom": "17.0.2",
