--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@apollo/client": "^3.5.8",
+        "@contentful/rich-text-react-renderer": "^15.11.1",
         "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
         "@fortawesome/free-brands-svg-icons": "^5.15.4",
         "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
