--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
         "@fortawesome/react-fontawesome": "^0.1.17",
         "graphql": "^16.3.0",
-        "next": "12.0.9",
+        "next": "^12.1.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "typewriter-effect": "^2.18.2"
