--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "dependencies": {
         "@apollo/client": "^3.5.8",
         "@contentful/rich-text-react-renderer": "^15.11.1",
-        "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
+        "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-brands-svg-icons": "^5.15.4",
-        "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
-        "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
+        "@fortawesome/free-regular-svg-icons": "^6.0.0",
+        "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
         "graphql": "^16.3.0",
         "next": "^12.1.0",
@@ -22,7 +22,7 @@
         "typewriter-effect": "^2.18.2"
     },
     "devDependencies": {
-        "eslint": "8.8.0",
-        "eslint-config-next": "12.0.9"
+        "eslint": "8.9.0",
+        "eslint-config-next": "12.1.0"
     }
 }
