--- a/package.json
+++ b/package.json
@@ -8,17 +8,13 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@apollo/client": "^3.5.9",
-        "@contentful/rich-text-react-renderer": "^15.11.1",
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-brands-svg-icons": "^6.0.0",
         "@fortawesome/free-regular-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
-        "graphql": "^16.3.0",
         "next": "^12.1.0",
         "react": "17.0.2",
-        "react-dom": "17.0.2",
-        "typewriter-effect": "^2.18.2"
+        "react-dom": "17.0.2"
     },
     "devDependencies": {
         "eslint": "8.9.0",
