--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
         "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
+        "dev": "next dev",
+        "lint": "next lint",
+        "start": "next start"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.1.2",
