--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-    "name": "parkerbotsford.com",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "build": "next build",
-        "dev": "next dev",
-        "lint": "next lint",
-        "start": "next start"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^6.1.2",
-        "@fortawesome/free-brands-svg-icons": "^6.1.2",
-        "@fortawesome/free-regular-svg-icons": "^6.1.2",
-        "@fortawesome/react-fontawesome": "^0.2.0",
-        "next": "^12.2.5",
-        "react": "18.2.0",
-        "react-dom": "18.2.0"
-    },
-    "devDependencies": {
-        "eslint": "8.22.0",
-        "eslint-config-next": "12.2.5"
-    }
+  "name": "parkerbotsford.com",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@types/node": "18.14.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.1",
+    "next": "13.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.9.5"
+  }
 }
