--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
         ],
         "baseUrl": ".",
         "paths": {
+            "@/app/*": ["src/app/*"],
             "@/components/*": ["src/components/*"],
             "@/styles/*": ["src/styles/*"]
         }
