--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
         "baseUrl": ".",
         "paths": {
             "@/app/*": ["src/app/*"],
-            "@/components/*": ["src/components/*"],
-            "@/styles/*": ["src/styles/*"]
+            "@/components/*": ["src/app/components/*"],
+            "@/styles/*": ["src/app/styles/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
