refactor: layout and configure project structure
- /app - for routing, pages, layouts, and error-handling
- /components - for components and component styles
- /styles - for page and layout styles

adjusted import paths for components and styles as well

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
         ],
         "baseUrl": ".",
         "paths": {
-            "@/app/*": ["src/app/*"],
-            "@/components/*": ["src/app/components/*"],
-            "@/styles/*": ["src/app/styles/*"]
+            "@app/*": ["src/app/*"],
+            "@components/*": ["src/components/*"],
+            "@styles/*": ["src/styles/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
