--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "next": "13.5.3",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "uuid": "9.0.1"
+    },
+    "devDependencies": {
+        "@types/uuid": "9.0.4",
         "@types/node": "20.8.0",
         "@types/react": "18.2.24",
         "@types/react-dom": "18.2.8",
         "eslint": "8.50.0",
         "eslint-config-next": "13.5.3",
-        "next": "13.5.3",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "typescript": "5.2.2",
-        "uuid": "^9.0.1"
-    },
-    "devDependencies": {
-        "@types/uuid": "^9.0.4"
+        "typescript": "5.2.2"
     }
 }
