refactor(main): Redesign directories and imports
Each section of parkerbotsford.com is split into its own directory in
`/sections`.

Each section will contain a main `index.ts` file for easy importing and
exporting, as well as sub-directories for components and any other logic
specific to that section.

`/components` will still exist to store any components that are used in
multiple sections.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
         "baseUrl": ".",
         "paths": {
             "@app/*": ["src/app/*"],
+            "@sections/*": ["src/sections/*"],
             "@components/*": ["src/components/*"],
             "@styles/*": ["src/styles/*"]
         }
