--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     },
     "dependencies": {
         "next": "13.5.4",
+        "next-themes": "^0.2.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "uuid": "9.0.1"
     },
     "devDependencies": {
-        "@types/uuid": "9.0.4",
         "@types/node": "20.8.2",
         "@types/react": "18.2.25",
         "@types/react-dom": "18.2.10",
+        "@types/uuid": "9.0.4",
+        "autoprefixer": "^10.4.16",
         "eslint": "8.50.0",
         "eslint-config-next": "13.5.4",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.3",
         "typescript": "5.2.2"
     }
 }
