feat: implemented themeToggle component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
             "@app/*": ["src/app/*"],
             "@sections/*": ["src/sections/*"],
             "@components/*": ["src/components/*"],
+            "@providers/*": ["src/providers/*"],
             "@styles/*": ["src/styles/*"]
         }
     },
